--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "swiper": "^8.3.2",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
